<resources>
  <string name="app_name">Agora Vote</string>
  <string name="continue_with_facebook">Continue With Facebook</string>
  <string name="log_in">LOG IN</string>
  <string name="sign_up">Sign Up</string>
  <string name="create_account">Create Account</string>
  <string name="content_description_for_agora_logo">Agora Logo</string>
  <string name="user_name">User Name</string>
  <string name="password">Password</string>
  <string name="login">Login</string>
  <string name="user_login">User Login</string>
  <string name="user_sign_up">User Sign Up</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="email_address">Email Address</string>
  <string name="already_have_an_account">Already Have An Account ?</string>
  <string name="sign_in">Sign In</string>
  <string name="forgot_password">Forgot Password ?</string>
  <string name="profile">Profile</string>
  <string name="dashboard">Dashboard</string>
  <string name="communicate">Communicate</string>
  <string name="report_a_bug">Report a bug</string>
  <string name="share_with_others">Share with others</string>
  <string name="about_agora">About Agora</string>
  <string name="my_invitations">My Invitations</string>
  <string name="contact_us">Contact Us</string>
  <string name="about_info">Agora vote is a voting platform where users can create elections and invite friends to cast their votes.</string>
  <string name="about_info2">It supports a wide range of voting algorithms some of which are Majority, Egalitarian, Australian STV just to name a few</string>
  <string name="contact_us_desc">Feel free to contact us on our Gitter channels and work with us on Gitlab</string>
  <string name="gitter_aossie">AOSSIE\'s GITTER</string>
  <string name="gitlab_aossie">AOSSIE\'s GITLAB</string>
  <string name="raise_issue">Feel free to raise an issue so that our team can improve that as fast as possible</string>
  <string name="change_password">Change Password</string>
  <string name="new_password">New Password</string>
  <string name="confirm_new_password">Confirm New Password</string>
  <string name="Create_Election">Create Election</string>
  <string name="active_nelections">Active  \n Elections</string>
  <string name="pending_nelections">Pending  \nElections</string>
  <string name="total_nelections">Total \n Elections</string>
  <string name="finished_nelections">Finished \n Elections</string>
  <string name="invite_voters">Invite Voters?</string>
  <string name="get_real_time_results">Get real time results?</string>
  <string name="how_secret_are_ballots">How secret are ballots?</string>
  <string name="who_can_see_the_list_of_voters">Who can see the list of voters?</string>
  <string name="only_me">Only me</string>
  <string name="everyone_with_access_to_election">Everyone with access to election</string>
  <string name="some_more_options">Some More Options</string>
  <string name="next">Next</string>
  <string name="add_candidate">Add Candidate</string>
  <string name="name_of_candidate">Name of Candidate</string>
  <string name="enter_candidate_s_name">Enter Candidate\'s Name</string>
  <string name="election_description">Election Description</string>
  <string name="election_name">Election Name</string>
  <string name="election_method">Election Method</string>
  <string name="start_date_format">Start Date</string>
  <string name="end_date_format">End Date</string>
  <string name="datePicker">datePicker</string>
  <string name="select_voting_algorithm">Select Voting Algorithm</string>
  <string-array name="ballot_visibility">
    <item name="ballots_are_completely_secret">Completely secret and never shown to anyone</item>
    <item name="ballots_visible_only_to_me">Visible only to me</item>
    <item name="ballots_visible_to_everyone">Visible to everyone with access to the election</item>
  </string-array>
  <string name="baldwin">Baldwin</string>
  <string name="exhaustive_ballot">ExhaustiveBallot</string>
  <string name="logout">Logout</string>
  <string name="testemail">testemail</string>
  <string name="zero">0</string>
  <string name="user_email_id">user email id</string>
  <string name="send_link">Send Link</string>
  <string name="verify">Verify</string>
  <string name="developed_with_by_aossie">Developed with ❤ by AOSSIE</string>
  <string name="enter_user_name_reset_pass_link">Please enter user name to receive password reset link</string>
  <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco labor</string>
  <string name="candidates">Candidates</string>
  <string name="candidate_list_hardcoded">Candidates Name</string>
  <string name="start">START:</string>
  <string name="starting_date">Starting Date</string>
  <string name="status">STATUS:</string>
  <string name="election_status">Election Status</string>
  <string name="end">END:</string>
  <string name="ending_date">Ending Date</string>
  <string name="image_button">Image Button</string>
  <string name="description">Description</string>
  <string name="active_elections">Active Elections</string>
  <string name="finished_elections">Finished Elections</string>
  <string name="pending_elections">Pending Elections</string>
  <string name="total_elections">Total Elections</string>
  <string name="share_with_others_to_make_open_source_a_more_beautiful_place">Share with others to make open source a more beautiful place</string>
  <string name="delete_election">Delete election</string>
  <string name="invite_voter">Invite Voters</string>
  <string name="voters">Voters</string>
  <string name="ballot">Ballot</string>
  <string name="result">Result</string>
  <string name="ballots">Ballots</string>
  <string name="vote_ballot">Vote Ballot</string>
  <string name="voter_name">Voter Name</string>
  <string name="voter_email">Voter Email</string>
  <string name="email_of_voter">Email of the Voter</string>
  <string name="name_of_the_voter">Name of the Voter</string>
  <string name="add_voter">Add Voter</string>
  <string name="swipe_to_delete_voter">Swipe to delete Voter</string>
  <string name="swipe_to_delete_candidate">Swipe to delete Candidate</string>
  <string name="enter_details_of_voters">Enter Details of Voters</string>
  <string name="winner_name">Winner Name</string>
  <string name="answer">Answer</string>
  <string name="security_question_answer">Please Write Your Answer Here</string>
  <string name="security_dropdown">Security Question</string>
  <string name="welcome">Welcome, %1$s!</string>
  <string name="link_sent_please_check_your_email">Link Sent, Please Check Your Emails</string>
  <string name="invalid_username">Invalid Username</string>
  <string name="invalid_password">Invalid Password</string>
  <string name="something_went_wrong_please_try_again_later">Something Went Wrong. Please Try Again Later</string>
  <string name="internet_connected">Connection Established Successfully</string>
  <string name="ballots_are_completely_secret">Completely secret and never shown to anyone</string>
  <string name="ballots_visible_only_to_me">Visible only to me</string>
  <string name="ballots_visible_to_everyone">Visible to everyone with access to the election</string>
  <string name="oklahoma">Oklahoma</string>
  <string name="rangevoting">RangeVoting</string>
  <string name="rankedpairs">RankedPairs</string>
  <string name="satisfaction_approval_voting">Satisfaction Approval Voting</string>
  <string name="smithset">SmithSet</string>
  <string name="sequential_proportional_approval_voting">Sequential Proportional Approval Voting</string>
  <string name="approval">Approval</string>
  <string name="exhaustive_ballot_with_dropoff">Exhaustive ballot with dropoff</string>
  <string name="copeland">Copeland</string>
  <string name="uncovered_set">UncoveredSet</string>
  <string name="borda">Borda</string>
  <string name="minimax_condorcet">MinimaxCondorcet</string>
  <string name="nanson">Nanson</string>
  <string name="kemeny_young">Kemeny-Young</string>
  <string name="random_ballot">RandomBallot</string>
  <string name="contingent_method">Contingent</string>
  <string name="instant_runoff_2_round">InstantRunoff2Round</string>
  <string name="nothing_to_show_here">Nothing to show here</string>
  <string-array name="security_questions">
    <item>What is your Mother\'s maiden name?</item>
    <item>What is the name of your first pet?</item>
    <item>What is your nickname?</item>
    <item>Which elementary school did you attend?</item>
    <item>What is your hometown?</item>
  </string-array>
  <string-array name="algorithms">
    <item name="oklahoma">Oklahoma</item>
    <item name="rangevoting">RangeVoting</item>
    <item name="rankedpairs">RankedPairs</item>
    <item name="satisfaction_approval_voting">Satisfaction Approval Voting</item>
    <item name="smithset">SmithSet</item>
    <item name="sequential_proportional_approval_voting">Sequential Proportional Approval Voting</item>
    <item name="approval">Approval</item>
    <item name="exhaustive_ballot_with_dropoff">Exhaustive ballot with dropoff</item>
    <item name="copeland">Copeland</item>
    <item name="uncovered_set">UncoveredSet</item>
    <item name="borda">Borda</item>
    <item name="minimax_condorcet">MinimaxCondorcet</item>
    <item name="nanson">Nanson</item>
    <item name="kemeny_young">Kemeny-Young</item>
    <item name="random_ballot">RandomBallot</item>
    <item name="contingent_method">Contingent</item>
    <item name="instant_runoff_2_round">InstantRunoff2Round</item>
  </string-array>
  <string name="email_id_label">Email :</string>
  <string name="user_name_label">UserName :</string>
  <string name="first_name_label">First Name :</string>
  <string name="last_name_label">Last Name :</string>
  <string name="update_profile">Update Profile</string>
  <string name="password_empty_warn">Password Cannot Be Empty</string>
  <string name="password_not_match_warn">Passwords Not Matching</string>
  <string name="password_change_success">Password changed successfully</string>
  <string name="token_expired">Your session was expired. Please login again!</string>
  <string name="voter_same_email">Voter with same Email Id already added</string>
  <string name="user_updated">User updated successfully!</string>
  <string name="password_updated">Password updated successfully!</string>
  <string name="profile_updated">Profile photo updated successfully!</string>
  <string name="authentication_updated">Two Factor Authentication updated, Please login again!</string>
  <string name="first_name_empty">First Name cannot be empty</string>
  <string name="last_name_empty">Last Name cannot be empty</string>
  <string name="email_changed">Email cannot be changed</string>
  <string name="username_changed">Username cannot be changed</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title">title</string>
  <string name="more">More</string>
  <string name="elections">Elections</string>
  <string name="bad_request">Bad Request</string>
  <string name="unauthenticated">Unauthenticated</string>
  <string name="invalid_credentials">Invalid Credentials</string>
  <string name="active">ACTIVE</string>
  <string name="start_at">Start At  :  </string>
  <string name="fri_jan_24_12_00_04">Fri Jan 24 12:00:04</string>
  <string name="end_at">End At  :  </string>
  <string name="share">Share</string>
  <string name="camera">Camera</string>
  <string name="camera_option">Camera Option</string>
  <string name="gallery_option">Gallery Option</string>
  <string name="gallery">Gallery</string>
  <string name="no_result">Nothing to show here</string>
  <string name="winner_is">is the winner</string>
  <string name="export_xlsx">Export</string>
</resources>