<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".homelogin.HomeLoginActivity"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="16dp"
      >

    <Button
        android:id="@+id/signup_btn"
        style="@style/MainButtonStyle"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up"
        app:backgroundTint="@color/greenTint"
        app:layout_constraintBottom_toTopOf="@+id/fb_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/fb_login_btn"
        style="@style/MainButtonStyle"
        android:layout_marginBottom="16dp"
        android:text="@string/continue_with_facebook"
        app:backgroundTint="@color/blueTint"
        app:layout_constraintBottom_toTopOf="@+id/signin_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/signin_btn"
        style="@style/MainButtonStyle"
        android:layout_marginBottom="32dp"
        android:text="@string/log_in"
        app:backgroundTint="@color/yellowTint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/main_logo_iv"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/content_description_for_agora_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/agora"
        />

    <TextView
        android:id="@+id/agora_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logo_iv"
        android:gravity="center_horizontal"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
