<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_10dp"
    tools:context=".ui.fragments.moreOptions.MoreOptionsFragment"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <TextView
        android:id="@+id/tv_dashboard"
        style="@style/MoreFragmentsTextViewStyle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:drawableStart="@drawable/ic_view_carousel_black_24dp"
        android:drawableLeft="@drawable/ic_view_carousel_black_24dp"
        android:text="@string/dashboard"
        />
    <TextView
        android:id="@+id/tv_about"
        style="@style/MoreFragmentsTextViewStyle"
        android:layout_below="@+id/tv_dashboard"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:drawableStart="@drawable/ic_code_black_24dp"
        android:drawableLeft="@drawable/ic_code_black_24dp"
        android:text="@string/about_agora"
        />
    <TextView
        android:id="@+id/tv_report"
        style="@style/MoreFragmentsTextViewStyle"
        android:layout_below="@+id/tv_about"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:drawableStart="@drawable/ic_bug_report_black_24dp"
        android:drawableLeft="@drawable/ic_bug_report_black_24dp"
        android:text="@string/report_a_bug"
        />
    <TextView
        android:id="@+id/tv_share"
        style="@style/MoreFragmentsTextViewStyle"
        android:layout_below="@id/tv_report"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:drawableStart="@drawable/ic_share_black_24dp"
        android:drawableLeft="@drawable/ic_share_black_24dp"
        android:text="@string/share_with_others"
        />
    <TextView
        android:id="@+id/tv_contact_us"
        style="@style/MoreFragmentsTextViewStyle"
        android:layout_below="@+id/tv_share"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:drawableStart="@drawable/ic_local_post_office_black_24dp"
        android:drawableLeft="@drawable/ic_local_post_office_black_24dp"
        android:text="@string/contact_us"
        />

    <TextView
        android:id="@+id/tv_logout"
        style="@style/MoreFragmentsTextViewStyle"
        android:layout_below="@+id/tv_contact_us"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:drawableStart="@android:drawable/ic_lock_power_off"
        android:drawableLeft="@android:drawable/ic_lock_power_off"
        android:text="@string/logout"
        />


  </RelativeLayout>
</ScrollView>


