<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_cornered_background"
    android:backgroundTint="@color/white"
    android:gravity="center">

  <LinearLayout
      android:id="@+id/camera_view"
      android:layout_width="@dimen/size_175dp"
      android:layout_height="@dimen/size_200dp"
      android:orientation="vertical"
      android:layout_gravity="center"
      tools:ignore="UseCompoundDrawables"
      >
    <ImageView
        android:layout_width="@dimen/size_100dp"
        android:layout_height="@dimen/size_100dp"
        android:src="@drawable/ic_camera"
        android:layout_gravity="center"
        android:layout_margin="@dimen/size_30dp"
        android:contentDescription="@string/camera_option"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textAlignment="center"
        android:textSize="@dimen/size_24sp"
        android:textColor="@color/black"/>
  </LinearLayout>

  <LinearLayout
      android:id="@+id/gallery_view"
      android:layout_width="@dimen/size_175dp"
      android:layout_height="@dimen/size_200dp"
      android:orientation="vertical"
      android:layout_gravity="center"
      tools:ignore="UseCompoundDrawables"
      >
    <ImageView
        android:layout_width="@dimen/size_100dp"
        android:layout_height="@dimen/size_100dp"
        android:src="@drawable/ic_art"
        android:layout_gravity="center"
        android:layout_margin="@dimen/size_30dp"
        android:contentDescription="@string/gallery_option"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textAlignment="center"
        android:textSize="@dimen/size_24sp"
        android:textColor="@color/black"/>
  </LinearLayout>

</LinearLayout>